<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">HANDY</string>
    <string name="double_click_exit_tint">再按一次后退键退出Handy</string>
    //通用
    <string name="http_error">网络异常</string>
    <string name="unKnown_error">未知错误</string>
    <string name="auto_login_in">自动登录</string>
    <string name="logout">退出登录</string>
    <string name="login_tint">请先登录</string>
    <string name="login_success">登录成功~</string>
    <string name="account_password_null_tint">用户名或密码不能为空</string>
    <string name="login_fail">登录失败</string>
    <string name="logout_fail">退出登录失败</string>
    <string name="register_fail">注册失败</string>
    <string name="password_not_same">密码不匹配</string>
    <string name="auto_login_success">自动登录成功</string>

    <!--// 登录-->
    <string name="login_title">账号密码登录</string>
    <string name="login_account_tint">请输入用户名</string>
    <string name="login_password_tint">请输入密码</string>
    <string name="login_confirm_password_tint">请输入确认密码</string>
    <string name="login_in">登录</string>
    <string name="register">注册</string>
    <string name="login_out">退出登录</string>

    <string name="or">或</string>

    <!--注册-->
    <string name="register_account_hint">邮箱/手机号</string>
    <string name="register_password_hint">输入密码</string>
    <string name="register_confirm_password_hint">确认密码</string>
    <string name="register_success">注册成功</string>


    <!--bottom navigation bar-->
    <string name="navigation_follow">关注</string>
    <string name="navigation_collect">收藏</string>
    <string name="navigation_home_pager">首页</string>
    <string name="navigation_account">个人中心</string>

    <!--error view-->
    <string name="error_tips">不妙！加载失败了\n 一些可能的原因：\n1.网络环境不佳\n 2.服务器问题\n 3.Handy拒绝服务~</string>
    <string name="reload">重新加载</string>

    //主页
    <!--<string name="item_article_author">作者：<xliff:g id="author">%s</xliff:g></string>-->
    <!--<string name="item_article_classify">分类：<xliff:g id="classify">%s</xliff:g></string>-->
    <!--<string name="item_article_time">时间：<xliff:g id="time">%s</xliff:g></string>-->
    <!--<string name="install">安装</string>-->
    <string name="logout_tint">退出登录?</string>
    <string name="failed_to_obtain_banner_data">获取广告数据失败</string>
    <string name="failed_to_obtain_course_list">获取教程列表数据失败</string>
    <string name="failed_to_obtain_album_list">获取教程专辑数据失败</string>
    <string name="failed_to_obtain_course_detail">获取教程详情失败</string>
    <string name="failed_to_obtain_follow_data">获取关注动态失败</string>
    <string name="search_tint">搜索专辑或教程</string>
    <string name="main_pager_labels">专区分类</string>
    <string name="recommend_album_title">推荐专辑</string>
    <string name="recommend_album_tint">一个适合新手入门的小合集～</string>
    <string name="recommend_course_title">推荐教程</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--发布教程-->
    <string name="publish_course_toolbar_title">发布教程</string>
    <string name="upload_cover_picture">+上传封面图</string>
    <string name="material">用料</string>
    <string name="material_name">用料名:</string>
    <string name="amount">用量:</string>
    <string name="add_row">再添加一行</string>
    <string name="adjust_material">调整用料</string>
    <string name="publish_course_step">做法</string>
    <string name="upload_step_picture">+上传步骤图</string>
    <string name="add_step_explain">添加步骤说明</string>
    <string name="adjust_step">调整步骤</string>
    <string name="step">步骤</string>
    <string name="publish_course">发布教程</string>
    <string name="title_hint">标题</string>
    <string name="tips">小贴士</string>
    <string name="material_hint">输入你的用料</string>
    <string name="share_view">shareView</string>
    <string name="publish_labels">分类标签</string>
    <string name="publish_select_labels">点击选择一个或多个标签</string>
    <string name="publish_custom_labels">或输入一个自定义标签</string>
    <string name="publish_course_label_hint">自定义标签</string>
    <string name="publish_level">难度等级</string>
    <string name="publish_select_level">请选择一个合适的难度等级</string>
    <string name="level_1">入门</string>
    <string name="level_2">进阶</string>
    <string name="level_3">熟练</string>
    <string name="level_4">挑战</string>

    <string name="publish_fail">发布失败！</string>


    <!--follow-->
    <string name="follow">关注</string>
    <string name="unFollow">取消关注</string>


    <!--教程详情-->
    <string name="course_abstract">简介</string>
    <string name="course_material">材料</string>
    <string name="course_step">步骤</string>
    <string name="course_abstract_tint">树脂画是由树脂胶的透明特定性和可流动性逐层绘制、叠加而成，非传统绘画能达到的立体效果。也是近年来在国内兴起的一门新鲜艺术，树脂画材料一般为透明硬树脂胶和丙烯颜料。</string>

    <!--空布局-->
    <string name="network_err">网络错误</string>
    <string name="empty_network_error">网络错误，点击重试</string>
    <string name="empty_no_data">没有数据，点击重试</string>

    //设置
    <string name="setting_normal">通用设置</string>
    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_other">其它设置</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting">设置</string>
    <string name="send_email">选择邮件客户端:</string>
    <string name="ok">是</string>
    <string name="no">否</string>

</resources>
