<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/publish_course_level_view"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_10"
    android:paddingEnd="@dimen/dp_10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_20"
        android:textColor="#5C5757"

        android:text="@string/publish_level"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish_select_level"
        android:layout_marginBottom="@dimen/dp_10"
        android:textColor="#5C5757"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/publish_level_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/label_button"
            android:text="@string/level_1"
            android:textColor="@color/publish_course_button_orange"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/dp_10"
            />
        <Button
            android:id="@+id/publish_level_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/label_button"
            android:text="@string/level_2"
            android:textColor="@color/publish_course_button_orange"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/dp_10"
            />
        <Button
            android:id="@+id/publish_level_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/label_button"
            android:text="@string/level_3"
            android:textColor="@color/publish_course_button_orange"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/dp_10"
            />
        <Button
            android:id="@+id/publish_level_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/label_button"
            android:text="@string/level_4"
            android:textColor="@color/publish_course_button_orange"
            android:textSize="16sp"
            />
    </LinearLayout>



</LinearLayout>