<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/publish_course_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/picture_upload"
        android:background="@drawable/btn_upload_pic"
        android:textColor="#5C5757"
        android:layout_marginTop="@dimen/dp_0"
        android:layout_width="@dimen/dp_400"
        android:layout_height="@dimen/dp_400"
        android:layout_marginBottom="@dimen/dp_25"
        android:layout_margin="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:scaleType="fitCenter"

        />
    <TextView
        android:id="@+id/cover_pic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_cover_picture"
        android:layout_centerInParent="true"
        />
</RelativeLayout>

    <EditText
        android:id="@+id/publish_course_title_view"
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:layout_gravity="center"
        android:hint="@string/title_hint"
        android:textAlignment="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />
    <EditText
        android:id="@+id/publish_course_intro"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:background="@drawable/edittext_bg"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_20"
        android:singleLine="false"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:padding="@dimen/dp_10"
        android:focusable="false"
        android:focusableInTouchMode="false"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:textSize="@dimen/sp_20"
        android:textColor="#5C5757"

        android:padding="@dimen/dp_10"
        />

</LinearLayout>