<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar_no_scroll" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/register_input_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-140dp"
        android:text="@string/register"
        android:textColor="@color/title_black"
        android:textSize="@dimen/sp_36" />

    <LinearLayout
        android:id="@+id/register_input_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/register_account_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_48"
            android:layout_below="@id/login_tv"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@drawable/ic_account"
                android:contentDescription="@null" />

            <EditText
                android:id="@+id/register_account_edit"
                style="@style/style_circle_edit"
                android:hint="@string/register_account_hint"
                android:layout_marginStart="@dimen/dp_6"/>
        </LinearLayout>

        <View
            android:id="@+id/account_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/grey_divider"
            android:layout_below="@id/register_account_group"
            android:layout_marginStart="@dimen/dp_64"
            android:layout_marginEnd="@dimen/dp_64" />

        <LinearLayout
            android:id="@+id/register_password_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_1"
            android:layout_below="@id/account_divider"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@drawable/ic_password"
                android:contentDescription="@null" />

            <EditText
                android:id="@+id/register_password_edit"
                style="@style/style_circle_edit"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:layout_marginStart="@dimen/dp_6" />
        </LinearLayout>

        <View
            android:id="@+id/password_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/grey_divider"
            android:layout_below="@id/register_password_group"
            android:layout_marginStart="@dimen/dp_64"
            android:layout_marginEnd="@dimen/dp_64" />

        <LinearLayout
            android:id="@+id/register_confirm_password_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_1"
            android:layout_below="@id/password_divider"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@drawable/ic_password"
                android:contentDescription="@null" />

            <EditText
                android:id="@+id/register_confirm_password_edit"
                style="@style/style_circle_edit"
                android:hint="@string/login_password_tint"
                android:inputType="textPassword"
                android:layout_marginStart="@dimen/dp_6" />
        </LinearLayout>

        <View
            android:id="@+id/confirm_password_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/grey_divider"
            android:layout_below="@id/register_confirm_password_group"
            android:layout_marginStart="@dimen/dp_64"
            android:layout_marginEnd="@dimen/dp_64" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/confirm_password_divider"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_40"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/register_btn"
            style="@style/style_circle_btn"
            android:background="@drawable/bg_conner_green"
            android:layout_marginTop="@dimen/dp_32"
            android:text="@string/register" />

    </LinearLayout>
</RelativeLayout>
